[releng] Remove obsolete MaxPermSize settings
It has been unneeded (but ignored) for a while, and is now considered
an error when using Java 17.

Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>